fix progress bar percentage position inside not showing properly

--- a/src/blocks/progress-bar/style.scss
+++ b/src/blocks/progress-bar/style.scss
@@ -61,8 +61,9 @@
 					justify-content: flex-end;
 					align-items: center;
 					p {
+						height: 3.5em;
 						margin: 0;
-						line-height: 5;
+						line-height: 4em;
 					}
 				}
 			}
